# scikit-learn

./: .gitignore  install.sh  meson.build  meson_options.txt
scr/: fibonacci_numbers.pyx  fibonacci_numbers_python.py  setup.py  test.ipynb
sklearn/: meson.build
sklearn/cluster/: _k_means_lloyd.pyx  _kmeans.py
src/: fibonacci_numbers.c  gather.py  gather.sh  kmeans_performance.py  kurs_2024_sose_hpc_11.log.24957.err  kurs_2024_sose_hpc_11.log.24957.out  kurs_2024_sose_hpc_11.log.25160.out  kurs_2024_sose_hpc_11.log.25169.out  sklearn_profiling.sh  temporary.pyx  test.ipynb  timing.py  vtune.sh
